Bug 70358 - EDITING: Crash when deleting tables
Summary: EDITING: Crash when deleting tables
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.2.0 target:4.1.4
Keywords: regression
: 69084 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-11 01:23 UTC by Luiz Angelo Daros de Luca
Modified: 2015-09-03 18:29 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with tables that, when deleted at once, crashes LO (75.70 KB, application/vnd.oasis.opendocument.text)
2013-10-11 01:23 UTC, Luiz Angelo Daros de Luca
Details
Crash log file (157.45 KB, text/x-log)
2013-10-11 01:24 UTC, Luiz Angelo Daros de Luca
Details
bt on master (12.07 KB, text/plain)
2013-10-11 19:58 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luiz Angelo Daros de Luca 2013-10-11 01:23:44 UTC
Created attachment 87415 [details]
Document with tables that, when deleted at once, crashes LO

Hello,

I created a document with many tables that came from an HTML.
When I remove some of them, LO crashes. If I remove line by line, nothing happens.

I'll attach the document.

How to reproduce:

1) open document
2) select all of it
3) delete

The bug seems to be in JVM. However, when I disable it, LO askes me to enable it on restart. If I deny, it simply closes.

This is two logs generated from different JVM

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0x00007f0e28fb1574, pid=6594, tid=139700081920000
#
# JRE version: 7.0_25-b30
# Java VM: OpenJDK 64-Bit Server VM (23.7-b01 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# C  [libswlo.so+0x651574]  SwLayoutFrm::ShrinkFrm(long, unsigned char, unsigned char)+0x414
#
# Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#
# An error report file with more information is saved as:
# /home/luizluca/Downloads/LibreOffice_4.1.2.3_Linux_x86-64_deb_langpack_pt-BR/DEBS/hs_err_pid6594.log
#
# If you would like to submit a bug report, please include
# instructions on how to reproduce the bug and visit:
#   https://bugs.launchpad.net/ubuntu/+source/openjdk-7/
#

[error occurred during error reporting , id 0xb]

#
# A fatal error has been detected by the Java Runtime Environment:
#
#  SIGSEGV (0xb) at pc=0x00007f026a6b4128, pid=6423, tid=139648430143488
#
# JRE version: 6.0_27-b27
# Java VM: OpenJDK 64-Bit Server VM (20.0-b12 mixed mode linux-amd64 compressed oops)
# Derivative: IcedTea6 1.12.6
# Distribution: Ubuntu 13.04, package 6b27-1.12.6-1ubuntu0.13.04.2
# Problematic frame:
# C  [libvcllo.so+0x446128]  Window::ImplDecModalCount()+0x8
#
# An error report file with more information is saved as:
# /home/luizluca/Downloads/LibreOffice_4.1.2.3_Linux_x86-64_deb_langpack_pt-BR/DEBS/hs_err_pid6423.log
#
# If you would like to submit a bug report, please include
# instructions how to reproduce the bug and visit:
#   https://bugs.launchpad.net/ubuntu/+source/openjdk-6/
#

[error occurred during error reporting , id 0xb]

I also tried to save it as rtf but even with it LO crashes.


Operating System: Ubuntu
Version: 4.1.2.3 rc
Comment 1 Luiz Angelo Daros de Luca 2013-10-11 01:24:32 UTC
Created attachment 87416 [details]
Crash log file
Comment 2 Julien Nabet 2013-10-11 19:58:01 UTC
Created attachment 87479 [details]
bt on master

On pc Debian x86-64 with master sources updated today, I reproduced the crash.
I attached bt.
Comment 3 Julien Nabet 2013-10-11 19:58:24 UTC
So put it at NEW.
Comment 4 tommy27 2013-10-11 20:10:27 UTC
reproduced on 4.1.2.3 and 4.1.0.4 under Win7 64bit
open file --> edit/select all --> Canc --> crash

no crash in OOo 4.0.5
hence regression of the 4.1.x branch.
Comment 5 Y 2013-10-13 17:14:22 UTC
Affects also 4.1.2.3 in Ubuntu.

It seems to be caused by nested tables.

Crash is also triggered by deleting a row which has a nested table, but if I delete the nested table first, I can delete the outer table as well without crash.
Comment 6 Caolán McNamara 2013-10-31 10:16:58 UTC
added fix to master, proposed patch to not crash to 4-1 in gerrit
Comment 7 Caolán McNamara 2013-10-31 10:28:11 UTC
*** Bug 69084 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2013-10-31 10:31:47 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8e12b32ae23ee9b1613ef7794b83adbde27e9f8

Resolves: fdo#70358 crash when deleting tables



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2013-11-02 21:31:51 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c5112b0ab7c97a092981fe0d1a6c8bf37931b53e&h=libreoffice-4-1

Resolves: fdo#70358 crash when deleting tables


It will be available in LibreOffice 4.1.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 jddcef 2015-09-02 21:44:42 UTC
This seems to have regressed in at least 5.0.1.2 release on Windows 8.1 x64. I created a new Bug 93869 for it.
Comment 11 Julien Nabet 2015-09-03 18:29:12 UTC
*** Bug 69084 has been marked as a duplicate of this bug. ***