Resolves: fdo#70358 crash when deleting tables

Change-Id: I87282e363425a1bb6d9ab92e07717f66ee56a6c5